Fix display on mobiles

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
-.container {
-  padding: 0;
+.container-fluid {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+
+
+.margin {
+  margin-left: 10px;
+  margin-right: 10px;
 }
