--- a/src/app/components/cart-item/cart-item.component.css
+++ b/src/app/components/cart-item/cart-item.component.css
@@ -6,6 +6,6 @@
   border: 1px solid black;
 } */
 
-.container {
+.container-fluid {
   padding: 0;
 }
