--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,7 +1,3 @@
-/* div {
-  border: 1px solid black;
-} */
-
-/* .container {
-  padding: 0;
-} */
+.container-fluid {
+  padding: 10px;
+}
