--- a/src/app/components/inventory-item/inventory-item.component.css
+++ b/src/app/components/inventory-item/inventory-item.component.css
@@ -2,6 +2,7 @@
   min-height: 80px;
 }
 
-.container {
-  padding: 0;
+.container-fluid {
+  padding-left: 10px;
+  padding-right: 10px;
 }
