--- a/src/app/components/inventory/inventory.component.css
+++ b/src/app/components/inventory/inventory.component.css
@@ -1,3 +1,4 @@
-/* .container {
-  padding: 0;
-} */
+.container-fluid {
+  padding-left: 10px;
+  padding-right: 10px;
+}
